# PytriNets

./: README.md  pyproject.toml
pytrinets/: __init__.py
pytrinets/nets/: petri.py  reachability.py
pytrinets/plotting/: disp_petri.py  disp_reachability.py
